(PatternConverter)  Tile パターンを追加整理

--- a/PRG/Tools/PatternConverter/Outputs/pattern.css
+++ b/PRG/Tools/PatternConverter/Outputs/pattern.css
@@ -91,6 +91,62 @@
     background-color: #FFBB00;
 }
 
+.Tile_BackToFrontSpreadly {
+    background-color: #FFBB00;
+}
+
+.Tile_FrontToBackSpreadly {
+    background-color: #FFBB00;
+}
+
+.Tile_FrontToBack {
+    background-color: #FFBB00;
+}
+
+.Tile_BackToFront {
+    background-color: #FFBB00;
+}
+
+.Tile_RightToLeft {
+    background-color: #FFBB00;
+}
+
+.Tile_LeftToRight {
+    background-color: #FFBB00;
+}
+
+.Tile_Circle_Led3Point1 {
+    background-color: #FFBB00;
+}
+
+.Tile_Circle_Led3Point2 {
+    background-color: #FFBB00;
+}
+
+.Tile_Circle_Led2Point3 {
+    background-color: #FFBB00;
+}
+
+.Tile_Circle_Led3Point3 {
+    background-color: #FFBB00;
+}
+
+.Tile_Circle_Led1Point6 {
+    background-color: #FFBB00;
+}
+
+.Tile_Circle_Led2Point6 {
+    background-color: #FFBB00;
+}
+
+.Tile_Circle_Led3Point6 {
+    background-color: #FFBB00;
+}
+
+.Tile_Cross {
+    background-color: #FFBB00;
+}
+
 .Tree_AllOn {
     background-color: #0000FF;
 }
