(PatternConverter) Tree パターンに下から上の系列を追加

--- a/PRG/Tools/PatternConverter/Outputs/pattern.css
+++ b/PRG/Tools/PatternConverter/Outputs/pattern.css
@@ -191,4 +191,12 @@
     background-color: #0000FF;
 }
 
+.Tree_BottomToTop {
+    background-color: #0000FF;
+}
+
+.Tree_Wave {
+    background-color: #0000FF;
+}
+
 
