--- a/PRG/Tools/PatternConverter/Outputs/pattern.css
+++ b/PRG/Tools/PatternConverter/Outputs/pattern.css
@@ -271,4 +271,12 @@
     background-color: #0000FF;
 }
 
+.Tree_Explosion {
+    background-color: #0000FF;
+}
+
+.Tree_Implosion {
+    background-color: #0000FF;
+}
+
 
