(Sprinkler) 草パターンに爆発/爆縮を追加 #58

--- a/PRG/Tools/PatternConverter/Outputs/pattern.css
+++ b/PRG/Tools/PatternConverter/Outputs/pattern.css
@@ -71,6 +71,14 @@
     background-color: #00FF00;
 }
 
+.Grass_Explosion {
+    background-color: #00FF00;
+}
+
+.Grass_Implosion {
+    background-color: #00FF00;
+}
+
 .Grass_LeftToRightBlock {
     background-color: #00FF00;
 }
