(Sprinkler) 家パターンヘルパーと爆発/爆縮を追加 #58

--- a/PRG/Tools/PatternConverter/Outputs/pattern.css
+++ b/PRG/Tools/PatternConverter/Outputs/pattern.css
@@ -139,6 +139,14 @@
     background-color: #FF0000;
 }
 
+.House_Explosion {
+    background-color: #FF0000;
+}
+
+.House_Implosion {
+    background-color: #FF0000;
+}
+
 .Tile_AllOn {
     background-color: #FFBB00;
 }
