(Sprinkler) 家パターンに左から右と右から左を追加 #58

--- a/PRG/Tools/PatternConverter/Outputs/pattern.css
+++ b/PRG/Tools/PatternConverter/Outputs/pattern.css
@@ -123,6 +123,14 @@
     background-color: #FF0000;
 }
 
+.House_LeftToRight {
+    background-color: #FF0000;
+}
+
+.House_RightToLeft {
+    background-color: #FF0000;
+}
+
 .House_SpreadFromBottomPoint {
     background-color: #FF0000;
 }
