(BuildingPainter) Flask サーバのベースを登録

--- a/PRG/Tools/BuildingPainter/templates/index.html
+++ b/PRG/Tools/BuildingPainter/templates/index.html
@@ -30,7 +30,7 @@
     <div>
         <button id="buttonImport">Import</button>
     </div>
-    <script src="sketch.js"></script>
+    <script src="{{ url_for('static', filename='sketch.js') }}"></script>
 </body>
 
 </html>
