--- a/PRG/Tools/BuildingPainter/templates/index.html
+++ b/PRG/Tools/BuildingPainter/templates/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Simple Paint Tool</title>
+    <title>Building Painter</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
 </head>
 
 <body>
